# timeopt

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
commands/: check-urgent.md  done.md  dump.md  history.md  plan.md  setup.md  sync.md  tasks.md
docs/: claude-plugin-structure.md  spec.md
docs/superpowers/notes/: README.md  e2e-testing.md  plan1-api-contracts.md  plan2-api-contracts.md  plan3-server-wiring.md  test-coverage-gaps.md
docs/superpowers/plans/: 2026-03-28-core-backend.md  2026-03-28-integrations.md  2026-03-28-interfaces.md  2026-04-01-e2e-tests.md  2026-04-01-story-tests.md  2026-04-02-config-setup-ui.md  2026-04-10-pr-fixes.md  2026-04-10-pr-review-fixes-2.md  2026-04-10-pr-review-fixes-3.md  2026-04-10-pr-review-fixes.md
learnings/: learnings-task-a-guards.md  learnings-task-b-cleanup.md  learnings-task1-ui-sensitive-mask.md  learnings-task2-dead-tryexcept.md  learnings-task3-push-error-handling.md  learnings-task4-misc-fixes.md  learnings-task5-tests-and-get-config.md  learnings-task6-caldav-uvicorn.md
src/timeopt/: CLAUDE.md  caldav_client.py  cli.py  core.py  db.py  llm_client.py  planner.py  server.py  ui_server.py
src/timeopt/templates/: base.html  (+1 more)
tests/: CLAUDE.md  conftest.py  test_caldav.py  test_cli.py  test_core.py  test_core_dump.py  test_core_integrations.py  test_db.py  test_e2e_cli.py  test_e2e_server.py  test_e2e_stories.py  test_integration.py  test_llm.py  test_planner.py  test_push_blocks.py  test_server.py  test_sync.py  test_ui_server.py
(+4 files in other folders)
