[project]
name = "timeopt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "caldav>=1.3",
    "click>=8.1",
    "anthropic>=0.40",
    "openai>=1.0",
    "rapidfuzz>=3.0",
    "icalendar>=7.0.3",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "jinja2>=3.1",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
timeopt = "timeopt.cli:cli"
timeopt-server = "timeopt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timeopt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests (slow, spawn subprocess)"]
addopts = "-m 'not e2e'"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
